--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -249,8 +249,7 @@ li {
 
 #home-link img {
 
-    padding-right: 25px;
-    width: 110px;
+    padding-right: 25px;    
     height: 100px;
     width: auto;
 }
@@ -580,7 +579,7 @@ button:hover {
         display: flex;
         margin-left: 1000px;
         background-color: #393939;
-        transition: padding 1400ms cubic-bezier(0.23, 1, 0.32, 1);
+        /* transition: padding 1400ms cubic-bezier(0.23, 1, 0.32, 1); */
     }
 
     .nav-ul a {
@@ -590,7 +589,6 @@ button:hover {
         height: 0px;
         padding: 10px;
         text-align: center;
-        /* transition: padding 1400ms cubic-bezier(0.23, 1, 0.32, 1);      */
         transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
 
     }
@@ -598,7 +596,7 @@ button:hover {
     .nav-ul li {
         text-align: center;
         border-bottom: 1px solid aliceblue;
-        padding: 10px;
+        padding-bottom: 10px;
     }
 
 
@@ -619,6 +617,9 @@ button:hover {
 
     #menu-toggle:checked~.nav-ul a {
         height: 30px;
+        
+        padding-bottom: 10px;
+        padding-top: 0px;
 
     }
 
@@ -632,6 +633,12 @@ button:hover {
 
     #home-link {
         font-size: 2.5rem;
+    }
+
+    #home-link img {
+        padding-right: 25px;    
+        height: 100px;
+        width: auto;
     }
 
     .div-form-component input {
@@ -671,18 +678,20 @@ button:hover {
 
 @media all and (max-width: 400px) {
 
-    #home-link img {
-        padding-right: 25px;
-        width: auto;
-        height: auto;
-    }
+
 
     #home-link {
         font-size: 2rem;
     }
 
+    #home-link img {
+        padding-right: 25px;    
+        height: 100px;
+        width: auto;
+    }
+
     #menu-toggle:checked~.nav-ul {
-        margin-top: 107px;
+        margin-top: 118px;
     }
 
     .div-form-component input {
