updated view scores page

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -131,7 +131,7 @@ h2 {
     font-size: 1.5rem;
 
     border-radius: 3px;
-    background-color: #393939;
+    background-color: #514d4d;
     color: #ffffff;
 
     margin: 0px;
@@ -334,13 +334,13 @@ li {
     padding-top:2px;
 }
 
-
+/* Table formatting */
 
 table {
     
     border: solid 2px;
     text-align: left;
-
+    border-color: #868686;
     border-radius: 5px 5px 5px 5px;
     border-collapse: separate;
     border-spacing: 0;
@@ -363,7 +363,7 @@ td {
 th {
 
     padding: 2px;
-    background-color: #393939;
+    background-color: #868686;
     color: rgb(255, 255, 255);
     font-weight: 500;
     border-bottom: solid 2px;
@@ -412,6 +412,13 @@ tr:nth-child(even) {
     background-color: rgb(240, 233, 247);
     border-radius: 2px 2px 0px 0px;
 }
+
+
+
+
+
+
+
 select {
     width: 100%;    
     border-bottom: 1px outset;
@@ -434,7 +441,6 @@ select {
     width: 20px;
     
 }
-
 
 
 .time-div{
@@ -508,7 +514,43 @@ button:hover {
     transform: rotate(90deg);
 }
 
+.filter-div{
+    position: relative;
+    display: flex;
+        
+    
+}
+.filter {
+    border: solid 1px;
+    border-radius: 2px;
+    width: 100%;
+    
+    flex: 1;
 
+}
+
+.filterBtn {
+    background: none;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    right: 2px;   
+    
+       
+}
+.filterBtn > span{ 
+   
+   font-variation-settings:
+   'FILL' 0,
+   'wght' 400,
+   'GRAD' 0,
+   'opsz' -10;
+   vertical-align: bottom;
+   font-size:16px;
+   color: gray;
+   margin-left: auto;
+   
+}
 
 .menu-button-container {
     display: none;
