--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -607,8 +607,19 @@ button:hover {
 
 
 
-
-
+.spinner{
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 35% auto;
+    border: 3px solid transparent;
+    border-radius: 50%;
+    border-top-color: #8b49ee;
+    animation: spinner 1s infinite;
+    }
+    @keyframes spinner {
+        to { transform: rotateZ(360deg);  }
+      }
 
 
 
