fixed some bugs

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -866,7 +866,7 @@ button:hover {
         border: none;
         margin-left: 0px;
         overflow-x: hidden;
-        margin-top: 59px;
+        margin-top: 57px;
 
     }
 
@@ -925,6 +925,10 @@ button:hover {
     .div-form-component input {
         width: 100%;
 
+    }
+
+    .main-landing div {
+        width: 100%;
     }
 
 }
