--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -44,9 +44,7 @@
 
 }
 
-.collapsed {}
 
-.expanded {}
 
 
 body {
@@ -227,13 +225,9 @@ li {
     text-decoration: none;
     color: black;
     font-weight: 500;
-    padding: 2px;
-    
+    padding: 2px;   
 
 }
-
-
-
 
 
 
@@ -312,6 +306,7 @@ li {
     box-shadow: inset 0 0 5px 5px rgb(4 0 7 / 44%);
 }
 
+
 .nav-ul a:last-child {
     margin-left: auto;
 
@@ -321,6 +316,7 @@ li {
     padding: 0px;
     margin: 0px;
     height: 100%;
+    
 }
 
 .banner {
@@ -773,9 +769,14 @@ button:hover {
     }
 }
 
+.mobileNav {
+    display: none;
+}
 
-
-
+.logout-link{
+    display:none;
+    color: white;
+}
 
 
 
@@ -847,6 +848,7 @@ button:hover {
         transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
 
     }
+    
 
     .nav-ul li {
         text-align: center;
@@ -875,8 +877,10 @@ button:hover {
         margin-top: 2px;
         padding: 0px 10px 0 10px;
         margin-left: 50%;
-
+   
     }
+
+
 
     #menu-toggle:checked~.nav-ul a {
         height: 45px;
@@ -900,10 +904,29 @@ button:hover {
         justify-content: center;
     }
 
-
-
-
-
+    .logout-link {
+        display:block;  
+        color: white;        
+        text-decoration: underline;
+        font-size: .9rem;      
+        font-weight: 500;
+        padding: 10px;    
+    }
+    .logout-link:hover{
+        cursor: pointer;
+        color: #8b49ee;
+    }
+    .mobileNavHidden{
+        display: none;
+    }
+    .mobileNav {
+        color: white;
+        display: flex;
+        justify-content: space-between;
+    }
+    .mobileNav span{
+        padding:5px 5px 5px 5px;
+    }
 
     #loginBtn {
         margin: 0;
@@ -912,10 +935,6 @@ button:hover {
         
 
     }
-
-
-
-
     #home-link img {
 
         height: 50px;
@@ -930,6 +949,7 @@ button:hover {
     .main-landing div {
         width: 100%;
     }
+
 
 }
 
