fixed bug with mobileNav

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -772,6 +772,9 @@ button:hover {
 .mobileNav {
     display: none;
 }
+.mobileNavHidden{
+    display: none;
+}
 
 .logout-link{
     display:none;
