--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -322,7 +322,8 @@ li {
     background: #8B00FF;
     height: auto;
     padding: 5px;
-    padding-top: 10px;
+    padding-top: 6px;
+    padding-bottom: 6px;
     margin-bottom: 6px;
     border-radius: 5px;
     opacity: .5;
@@ -330,7 +331,7 @@ li {
     color: white;
     flex-direction: row;
     justify-content: space-between;
-    font-weight: 600;
+    font-weight: 500;
     vertical-align: center;
     /* box-shadow: 2px 2px 4px 2px #8b00ff87; */
 }
@@ -351,7 +352,7 @@ li {
 .banner p {
     padding: 0px;
     margin: 0px;
-    padding-top: 2px;
+    padding-top: 0px;
 }
 
 .error-banner p {
@@ -397,6 +398,42 @@ th {
 }
 
 
+.team-stats {
+    /* display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+    table-layout: auto; */
+    display: flex;
+    flex-wrap: wrap; 
+    
+    
+}
+.team-stats section{
+    max-width: 100%;
+}
+
+.modal {
+    padding: 2px;
+}
+
+.team {
+    padding: 2px;    
+    border-radius: 5px;
+}
+.team th:first-child {
+    border-top-left-radius: 5px; /* You can adjust the radius value as needed */
+}
+
+.team th:last-child {
+    border-top-right-radius: 5px; /* You can adjust the radius value as needed */
+}
+.team tr td:last-child{
+    border-bottom-right-radius: 5px;
+}
+.team tr td:first-child{
+    border-bottom-right-radius: 5px;
+}
+
 
 .table-link {
     text-decoration: underline;
@@ -414,6 +451,11 @@ tr:nth-child(even) {
 .stats-table tr:hover {
     background-color: #2a313a24;
     
+}
+
+.team-stats tr:hover{
+    background-color: #2a313a24;
+
 }
 .stats {
     border-radius: 3px 3px 0 0;
@@ -495,7 +537,11 @@ select {
     padding: 10px;
     background-color: rgb(240, 233, 247);
     border-radius: 2px 2px 0px 0px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
+
+
 
 #selectLeague {
 
