--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -140,7 +140,7 @@ section {
 
 
     header {
-        border-bottom: 3px solid;
+        border-bottom: 2px solid;
         z-index: 1;
         padding-top: 5px;
         box-shadow: inset 0px -20px 20px 1px #34455f;
@@ -286,23 +286,25 @@ li {
 .nav-ul li {
 
     border-radius: 5px;
-    font-weight: bold;
-    margin-top: 2px;
+    font-weight: 500;    
+    font-size: 1.1rem;
 }
 
 .nav-ul a {
     text-decoration: none;
     color: rgb(255, 255, 255);
-
+    transition: background-color, padding 0.3s ease;
+    border-radius: 5px;
+    padding: 0px;
 
 
 }
 
 .nav-ul a:hover {
-    background-color: rgb(178, 129, 223);
-    color: white;
+    background-color: #34455fad;
+    padding: 2px;
     border-radius: 5px;
-    box-shadow: inset 0 0 5px 5px rgb(4 0 7 / 44%);
+    
 }
 
 
