--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -222,7 +222,7 @@ li {
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    color: black;
+    color: #313B4A;
     font-weight: 500;
     padding: 2px;   
 
