--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -70,14 +70,16 @@ main {
     /* background: linear-gradient(rgb(255, 255, 255) 20%, #cccac9); */
     padding-top: 10px;
     /* background-color: #fcf8fe; */
-    background: white;
-    display: grid;
-    
-    grid-auto-flow: row;
+    background: white;    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: start;
+    /* grid-auto-flow: row;
     row-gap: 2px;
     column-gap: 2px;
     grid-template-rows: auto auto;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));  */
 
 }
 
@@ -96,6 +98,7 @@ main {
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     color: white;
+    align-content: center;
 }
 .main-landing .input-form-field{
     color: white;
@@ -134,7 +137,7 @@ section {
     margin: 5px;
     padding: 2px;
     border: 1px solid;
-    
+    flex-grow: 1;
 
 }
 
@@ -378,7 +381,7 @@ table {
     border-spacing: 0;
     
     text-align: left;
-    table-layout: fixed;
+    table-layout: auto;
     width: 100%;
 
 
